# PROMACHOS

./: Cargo.toml  README.md
PROMACHOS_PROJECT/: Cargo.toml
PROMACHOS_PROJECT/src/: agent.rs  main.rs  ollama.rs  schema.rs
PROMACHOS_PROJECT/src/tools/: browser.rs  mod.rs  system_info.rs
apps/promachos_desktop/: package-lock.json  package.json
apps/promachos_desktop/src/: App.tsx
apps/promachos_desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/promachos_desktop/src-tauri/src/: agent_bridge.rs  main.rs
crates/promachos_core/: Cargo.toml
crates/promachos_core/src/: agent.rs  config.rs  libs.rs
crates/promachos_core/src/tools/: file_ops.rs  mod.rs
