[package]
name = "PROMACHOS_PROJECT"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18.0"
regex = "1"
whoami = "1"
sysinfo = { version = "0.37.2", default-features = false, features = ["system", "multithread"] }
opener = "0.8.3"
similar = "2.7.0"
